github doesnt like my packages

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://externalhost0.github.io/reactTodolist",
   "name": "todolist_project",
   "private": true,
   "version": "0.0.0",
