--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://externalhost0.github.io/reactTodolist",
+  "homepage": ".",
   "name": "todolist_project",
   "private": false,
   "version": "0.0.0",
